add the other stuff

--- a/static/styles.css
+++ b/static/styles.css
@@ -1,5 +1,5 @@
 body {
-  background: url(/static/game-bg.png) #1a1a1a;
+  background: #1a1a1a;
   color: #eee;
   font-family: Calibri, Helvetica, sans-serif;
   margin: 0 auto;
